tests/negative_fixtures/import_missing_file.shx
import "nonexistent.shx";

console.log("This should not compile");
